# PaperClarity_V2

./: README.md  产品设计说明.md
app/backend/: main.py  pyproject.toml
app/backend/api/routes/: documents.py  export.py  health.py  notes.py  sessions.py  settings.py  skills.py
app/backend/core/: config.py
app/backend/db/: engine.py  tables.py
app/backend/db/repositories/: document_repo.py  note_repo.py  session_repo.py
app/backend/models/: block.py  document.py  equation.py  note.py  section.py  session.py  skill_context.py
app/backend/schemas/: common.py
app/backend/services/: chunker.py  context_service.py  document_loader.py  document_service.py  export_service.py  llm_gateway.py  pdf_parser.py  prompt_service.py  structure_extractor.py
app/backend/services/providers/: mock_provider.py  openai_compatible.py
app/backend/skills/: base.py  loader.py  registry.py  shared.py
app/backend/skills/equation_breakdown/: prompt.txt  skill.py
app/backend/skills/experiment_analysis/: prompt.txt  skill.py
app/backend/skills/intuition_translation/: prompt.txt  skill.py
app/backend/skills/paper_overview/: prompt.txt  skill.py
app/backend/skills/paragraph_close_reading/: prompt.txt  skill.py
app/backend/skills/reproduction_guide/: prompt.txt  skill.py
app/frontend/: index.html  package.json  tsconfig.json
app/frontend/src/: router.tsx
app/frontend/src/layouts/: MainLayout.tsx
scripts/: dev_all.sh  dev_backend.sh  dev_frontend.sh
tests/backend/: test_context_service.py  test_health.py  test_pdf_parser.py  test_prompt_service.py  test_skill_registry.py
(+31 files in other folders)
