[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paperclarity-backend"
version = "0.1.0"
description = "PaperClarity backend MVP"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "sqlmodel>=0.0.22",
  "pymupdf>=1.24.0",
  "httpx>=0.27.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["api*", "core*", "db*", "models*", "schemas*", "services*", "skills*"]

[tool.pytest.ini_options]
pythonpath = ["app/backend"]
testpaths = ["tests/backend"]
